package inf112.skeleton.app;

import Grid.Direction;
import map.GameMap;

public class Belt extends BeltElement {


    public Belt(GameMap map) {
        super(map);
    }

    public static void doBelt(IRobot robot) {
        int posX = robot.getPosX();
        int posY = robot.getPosY();

        switch (map.isConveyerBelt(posX, posY)) {
            case "northNoTurn":
                canMoveConveyor(Direction.NORTH, robot);
                break;
            case "eastNoTurn":
                canMoveConveyor(Direction.EAST, robot);
                break;
            case "southNoTurn":
                canMoveConveyor(Direction.SOUTH, robot);
                break;
            case "westNoTurn":
                canMoveConveyor(Direction.WEST, robot);
                break;
            case "northRight":
                if (canMoveConveyor(Direction.NORTH, robot) == 1) {
                    rotate_right(robot);
                }
                break;
            case "northLeft":
                if (canMoveConveyor(Direction.NORTH, robot) == 1) {
                    rotate_left(robot);
                }
                break;
            case "eastRight":
                if (canMoveConveyor(Direction.EAST, robot) == 1) {
                    rotate_right(robot);
                }
                break;
            case "eastLeft":
                if (canMoveConveyor(Direction.EAST, robot) == 1) {
                    rotate_left(robot);
                }
                break;
            case "southRight":
                if (canMoveConveyor(Direction.SOUTH, robot) == 1) {
                    rotate_right(robot);
                }
                break;
            case "southLeft":
                if (canMoveConveyor(Direction.SOUTH, robot) == 1) {
                    rotate_left(robot);
                }
                break;
            case "westRight":
                if (canMoveConveyor(Direction.WEST, robot) == 1) {
                    rotate_right(robot);
                }
                break;
            case "westLeft":
                if (canMoveConveyor(Direction.WEST, robot) == 1) {
                    rotate_left(robot);
                }
                break;
            case "noBelt":
                break;
        }
    }
}

