package inf112.skeleton.app;

import java.util.ArrayList;

public interface IDeck {
    ArrayList<Cards> getDeckList();
}
