package map;

public interface IGameMap {


    /**
     * @return The number of rows.
     */
    int getHeight();

    /**
     * @return The number of columns.
     */
    int getWidth();

}
