package map;

import java.util.Random;

//enum for some of the different tile elements on the map
public enum MapTile {
    WALL, OPEN, PLAYER, LASER, CHECKPOINT1, CHECKPOINT2, CHECKPOINT3, CHECKPOINT4, REPAIRSITE, REPAIRSITE2, HOLE, SPINRIGHT, SPINLEFT,
    CONVEYERBELTNORTH, CONVEYERBELTSOUTH, CONVEYERBELTEAST, CONVEYERBELTWEST, CONVEYERBELTNORTHTOEAST,CONVEYERBELTNORTHTOWEST,
    CONVEYERBELTEASTTONORTH, CONVEYERBELTEASTTOSOUTH,CONVEYERBELTSOUTHTOEAST, CONVEYERBELTSOUTHTOWEST, CONVEYERBELTWESTTONORTH,
    CONVEYERBELTWESTTOSOUTH, EXPRESSCONVEYERBELTNORTH, EXPRESSCONVEYERBELTSOUTH, EXPRESSCONVEYERBELTWEST, EXPRESSCONVEYERBELTEAST,
    EXPRESSCONVEYERBELTNORTHTOEAST, EXPRESSCONVEYERBELTNORTHTOWEST, EXPRESSCONVEYERBELTEASTTONORTH, EXPRESSCONVEYERBELTEASTTOSOUTH,
    EXPRESSCONVEYERBELTSOUTHTOEAST, EXPRESSCONVEYERBELTSOUTHTOWEST, EXPRESSCONVEYERBELTWESTTONORTH, EXPRESSCONVEYERBELTWESTTOSOUTH,
    LASERNORTH, LASEREAST, LASERSOUTH, LASERWEST;
}