package map;

public class MovePlayerException extends Exception {
    private static final long serialVersionUID = -6244594256969039528L;

    public MovePlayerException(String message) {
        super(message);
    }
}
